{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 56,
  "lineage": "bd3763ad-af8b-055c-5cdf-a254aacb63ca",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0877a1f9879b2452c",
            "arn": "arn:aws:ec2:eu-west-1:193779368448:elastic-ip/eipalloc-0877a1f9879b2452c",
            "association_id": "eipassoc-009f3116575a0726d",
            "domain": "vpc",
            "id": "eipalloc-0877a1f9879b2452c",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-03d518cadbc724d23",
            "private_dns": "ip-10-0-3-44.eu-west-1.compute.internal",
            "private_ip": "10.0.3.44",
            "public_dns": "ec2-34-253-125-187.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.125.187",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "eipalloc-0877a1f9879b2452c",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:internet-gateway/igw-04b18b2545ceceec5",
            "id": "igw-04b18b2545ceceec5",
            "owner_id": "193779368448",
            "region": "eu-west-1",
            "tags": {
              "Name": "iata-internet_gateway-",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-internet_gateway-",
              "application": "iata",
              "environment": "dev"
            },
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "igw-04b18b2545ceceec5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0877a1f9879b2452c",
            "association_id": "eipassoc-009f3116575a0726d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-043489aba842cd3ea",
            "network_interface_id": "eni-03d518cadbc724d23",
            "private_ip": "10.0.3.44",
            "public_ip": "34.253.125.187",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa471d741bb27b5d",
            "tags": {
              "Name": "iata-nat_gateway-",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-nat_gateway-",
              "application": "iata",
              "environment": "dev"
            },
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "nat-043489aba842cd3ea",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04b18b2545ceceec5",
            "id": "r-rtb-0ef72d8b8ed16459f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0ef72d8b8ed16459f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-0ef72d8b8ed16459f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02e376b39326accbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-043489aba842cd3ea",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-02e376b39326accbd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-02e376b39326accbd"
          },
          "dependencies": [
            "module.vpc.aws_eip.this",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:route-table/rtb-0ef72d8b8ed16459f",
            "id": "rtb-0ef72d8b8ed16459f",
            "owner_id": "193779368448",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Env": "",
              "Name": "iata-main-route-table-",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Env": "",
              "Name": "iata-main-route-table-",
              "application": "iata",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "rtb-0ef72d8b8ed16459f",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:route-table/rtb-02e376b39326accbd",
            "id": "rtb-02e376b39326accbd",
            "owner_id": "193779368448",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "iata-nat-route-table-",
              "application": "iata",
              "env": "",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-nat-route-table-",
              "application": "iata",
              "env": "",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "rtb-02e376b39326accbd",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1cb60e8288b18f3",
            "region": "eu-west-1",
            "route_table_id": "rtb-02e376b39326accbd",
            "subnet_id": "subnet-0810e48a263feb4a0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "rtbassoc-0a1cb60e8288b18f3",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be074776f1e210fb",
            "region": "eu-west-1",
            "route_table_id": "rtb-0ef72d8b8ed16459f",
            "subnet_id": "subnet-0fa471d741bb27b5d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "rtbassoc-0be074776f1e210fb",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:subnet/subnet-0810e48a263feb4a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0810e48a263feb4a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193779368448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "iata-private-subnet-10.0.1.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-private-subnet-10.0.1.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "subnet-0810e48a263feb4a0",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:subnet/subnet-04ca4014f268d00ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ca4014f268d00ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193779368448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "iata-private-subnet-10.0.2.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-private-subnet-10.0.2.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "subnet-04ca4014f268d00ef",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:subnet/subnet-0f4e39766d25889e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4e39766d25889e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193779368448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "iata-private-subnet-10.0.5.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-private-subnet-10.0.5.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "subnet-0f4e39766d25889e3",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:subnet/subnet-0f509b0f7f708e7bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f509b0f7f708e7bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193779368448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "iata-private-subnet-10.0.6.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-private-subnet-10.0.6.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "subnet-0f509b0f7f708e7bf",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:subnet/subnet-03550665ccccc2c4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03550665ccccc2c4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193779368448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "iata-private-subnet-10.0.7.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-private-subnet-10.0.7.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "subnet-03550665ccccc2c4b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:subnet/subnet-0fa471d741bb27b5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa471d741bb27b5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193779368448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "iata-public-subnet-10.0.3.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-public-subnet-10.0.3.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "subnet-0fa471d741bb27b5d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:subnet/subnet-0d73532ed43171e54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d73532ed43171e54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "193779368448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "iata-public-subnet-10.0.4.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-public-subnet-10.0.4.0/24",
              "application": "iata",
              "environment": "dev"
            },
            "vpc_id": "vpc-080eec44014eebbe0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "subnet-0d73532ed43171e54",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:193779368448:vpc/vpc-080eec44014eebbe0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a7f5b42909f20ef0",
            "default_route_table_id": "rtb-00cafbc4a3536e4a9",
            "default_security_group_id": "sg-09f773c7a8fa11a0d",
            "dhcp_options_id": "dopt-0702dbd9a6b6152a5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-080eec44014eebbe0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cafbc4a3536e4a9",
            "owner_id": "193779368448",
            "region": "eu-west-1",
            "tags": {
              "Name": "iata-vpc",
              "application": "iata",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "iata-vpc",
              "application": "iata",
              "environment": "dev"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "193779368448",
            "id": "vpc-080eec44014eebbe0",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}